syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 maximum = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    // Unary API
    rpc Sum(SumRequest) returns (SumResponse) {};

    // Server Streaming API
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    // Client Streaming API
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {}

    // Bi-Directional Streaming API
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {}

    // gRPC Error Handing Example | Unary API
    // Throws error if negative number is received.
    // Error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}
}